adjust responsiveness of calendar to stop content from overlapping and squishing together

--- a/web/src/pages/calendar.module.css
+++ b/web/src/pages/calendar.module.css
@@ -18,12 +18,13 @@
 }
 
 .pageContainer{
-    width          : 100%;
-    display        : grid;
-    justify-items  : center;
-    grid-auto-rows : auto;
-    grid-gap       : var( --xTiny-2-6 );
-    padding-bottom : var( --xTiny-2-6 );
+    width              : 100%;
+    height             : 100%;
+    display            : grid;
+    justify-items      : center;
+    grid-template-rows : max-content auto;
+    grid-gap           : var( --xTiny-2-6 );
+    padding-bottom     : var( --xTiny-2-6 );
 }
 
 
