--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -14,7 +14,7 @@ body{
 
 .fc-media-screen{
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .fc-direction-ltr .fc-toolbar > * > :not(:first-child){
@@ -53,7 +53,17 @@ body{
     white-space: normal;
 }
 
-/*.fc-h-event .fc-event-main{
-    width: 130px;
-    background-color: red;
-}*/
+.fc-daygrid-more-link{
+    background-color: hsl(var(--blue-700), 1);
+    color: hsl(var(--blue-50), 1);
+    display: grid;
+    place-items: center;
+    width: 100%;
+    /*height: var(--xTiny-1-3);*/
+    font-size: var(--text-caption-1);
+    word-wrap: break-all;
+}
+
+#gatsby-focus-wrapper > section > main > section > section > div > div.fc-view-harness.fc-view-harness-passive > div > table > tbody > tr > td > div > div > div{
+    width: 100%;
+}
